--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/src/assets/icons/favicon.ico" />
     <title>Digiency</title>
+    <link rel="stylesheet" href="./src/reset/reset.css" />
+    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="stylesheet" href="./src/light-theme.css" id="theme" />
   </head>
   <body>
     <div id="root"></div>
