--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/reset/reset.css" />
     <link rel="stylesheet" href="./src/index.css" />
     <link rel="stylesheet" href="./src/light-theme.css" id="theme" />
+    <base href="/Multipurpose-on-React/" />
   </head>
   <body>
     <div id="root"></div>
